--- a/src/components/style/style.scss
+++ b/src/components/style/style.scss
@@ -33,6 +33,7 @@ img {
 @import '../ui/card/card.scss';
 @import '../ui/button/button.scss';
 @import '../ui/graph/graph.scss';
+@import '../ui/input/input.scss';
 
 // sections
 @import '../sections/header/header.scss';
@@ -41,3 +42,4 @@ img {
 @import '../sections/unique/unique.scss';
 @import '../sections/products/products.scss';
 @import '../sections/clients/clients.scss';
+@import '../sections/footer/footer.scss';
