--- a/src/components/ui/button/button.scss
+++ b/src/components/ui/button/button.scss
@@ -13,4 +13,9 @@
     &--more {
         margin-top: 60px;
     }
+
+    &--send {
+        margin-top: 9px;
+        padding: 1em 3.8333em;
+    }
 }
