--- a/src/components/sections/products/products.pug
+++ b/src/components/sections/products/products.pug
@@ -3,9 +3,9 @@ include ../../ui/box/box.pug
 section(class="products")
     div(class="container-fluid my-container products__container")
         div(class="row products__row")
-            div(class="col-6 products__col")
+            div(class="col-12 col-sm-6 products__col")
                 div(class="products__bg")
-            div(class="col-6 products__col")
+            div(class="col-12 col-sm-6 products__col")
                 +box('Products', 'latest features', 'box-products')
                     p(class="paragraph products__paragraph") Nulla placerat mi vitae mauris varius consequat. Aliquam libero ante, consectetur at turpis sit amet, congue Suspendisse porta bibendum scelerisque.
                     p(class="paragraph products__paragraph") Suspendisse porta bibendum scelerisque. Nulla placerat
