--- a/src/components/sections/unique/unique.pug
+++ b/src/components/sections/unique/unique.pug
@@ -3,10 +3,10 @@ include ../../ui/box/box.pug
 section(Class="unique")
     div(Class="container-fluid my-container unique__container")
         div(class="row unique__row")
-            div(class="col-6 unique__col")
+            div(class="col-12 col-sm-6 unique__col")
                 +box('Be unique', 'people really matter', 'box-unique')
                     p(class="paragraph unique__paragraph") Nulla placerat mi vitae mauris varius consequat. Aliquam libero ante, consectetur at turpis sit amet, congue Suspendisse porta bibendum scelerisque.
                     p(class="paragraph unique__paragraph") Suspendisse porta bibendum scelerisque. Nulla placerat
                     a(class="button button--more unique__more" href="#") LEARN MORE
-            div(class="col-6 unique__col")
+            div(class="col-12 col-sm-6 unique__col")
                 div(class="unique__bg")
