--- a/src/components/pug/templates/layout.pug
+++ b/src/components/pug/templates/layout.pug
@@ -7,8 +7,8 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible" content="IE=edge")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet" href="assets/css/normalize.min.css")
-        link(rel="stylesheet" href="assets/css/bootstrap.css")
-        link(rel="stylesheet" href= app.isBuild ? "assets/css/style.min.css" : "assets/css/style.css" )
+        link(rel="stylesheet" href= app.isBuild ? "assets/css/bootstrap.min.css" : "assets/css/bootstrap.css")
+        link(rel="stylesheet" href= app.isBuild ? "assets/css/style.min.css" : "assets/css/style.css")
         title= title
     body(class="body")
         block header
