--- a/src/components/sections/header/header.scss
+++ b/src/components/sections/header/header.scss
@@ -42,3 +42,35 @@
         letter-spacing: unset;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .header {
+        &__row {
+            &--top {
+                --bs-gutter-y: 50px;
+            }
+        }
+
+        &__bottom {
+            padding-top: 50px;
+            padding-bottom: 50px;
+        }
+    }   
+    
+    .top-header {
+        &__img-wrap {
+            display: flex;
+            justify-content: center;
+        }
+
+        &__img {
+            height: 40px;
+        }
+    }
+
+    .bottom-header {
+        &__heading {
+            font-size: 2.5em;
+        }
+    }
+}
