--- a/src/components/sections/products/products.scss
+++ b/src/components/sections/products/products.scss
@@ -18,3 +18,15 @@
 .box-products {
     max-width: 401px;
 }
+
+@media screen and (max-width: 767px) {
+    .products {
+        &__row {
+            margin-bottom: 50px;
+        }
+        
+        &__bg {
+            display: none;
+        }
+    }
+}
